--- a/weone/src/app/pages/auth/profile/profile.component.html
+++ b/weone/src/app/pages/auth/profile/profile.component.html
@@ -2,72 +2,35 @@
     <div class="weone-container">
         <div class="profile-header">
             <div class="header-content">
-                <div class="weone-hero-badge">
-                    <span class="weone-badge-dot"></span>
-                    My Profile
-                </div>
                 <h1 class="weone-hero-title">
-                    Welcome, {{ user()?.firstName }}
+                    Welcome, {{ user()?.firstName || 'Manager' }}
                 </h1>
                 <p class="weone-hero-subtitle">
                     Manage your active sponsorships and account details below.
                 </p>
             </div>
-            <clerk-user-button />
-        </div>
 
-        <div class="weone-section-header">
-            <h2 class="weone-section-title">Your Active Sponsorships</h2>
+            <p-button
+                label="Sign Out"
+                icon="pi pi-sign-out"
+                (onClick)="authService.signOut()"
+                severity="secondary"
+                class="sign-out-button"
+            />
         </div>
 
         <div class="weone-table-wrapper">
             <p-table
                 [value]="sponsorships()"
-                [loading]="isLoadingSponsorships()"
+                [loading]="sponsorshipsLoading()"
                 styleClass="weone-wards-table"
                 [paginator]="true"
                 [rows]="5"
                 [showCurrentPageReport]="true"
                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} sponsorships"
             >
-                <ng-template pTemplate="header">
-                    <tr>
-                        <th style="width: 25%">Sponsored Item(s)</th>
-                        <th style="width: 20%">Total Amount Paid</th>
-                        <th style="width: 15%">Status</th>
-                        <th style="width: 20%">Sponsorship Ends On</th>
-                        <th style="width: 20%">Action</th>
-                    </tr>
-                </ng-template>
                 <ng-template pTemplate="body" let-sponsorship>
                     <tr>
-                        <td>
-                            <div class="weone-ward-info">
-                                <strong
-                                    >{{
-                                        sponsorship.cart.length
-                                    }}
-                                    Ward(s)</strong
-                                >
-                                <small>ID: {{ sponsorship._id }}</small>
-                            </div>
-                        </td>
-                        <td>
-                            {{
-                                sponsorship.totalAmount
-                                    | currency: 'INR' : 'symbol' : '1.0-0'
-                            }}
-                        </td>
-                        <td>
-                            <p-tag
-                                [severity]="
-                                    sponsorship.status === 'active'
-                                        ? 'success'
-                                        : 'warn'
-                                "
-                                [value]="sponsorship.status"
-                            ></p-tag>
-                        </td>
                         <td>{{ sponsorship.endDate | date: 'mediumDate' }}</td>
                         <td>
                             <p-button
@@ -78,16 +41,6 @@
                                 (onClick)="onCancel(sponsorship._id)"
                                 [loading]="isCancelling()"
                             />
-                        </td>
-                    </tr>
-                </ng-template>
-                <ng-template pTemplate="emptymessage">
-                    <tr>
-                        <td colspan="5">
-                            <div class="weone-empty-state">
-                                <i class="pi pi-inbox"></i>
-                                <p>You have no active sponsorships.</p>
-                            </div>
                         </td>
                     </tr>
                 </ng-template>
