--- a/weone/src/app/pages/about/about.component.html
+++ b/weone/src/app/pages/about/about.component.html
@@ -47,8 +47,14 @@
                     accountable members of the community.
                 </p>
             </div>
-            <div >
-                <img src="assets/images/logo.jpeg" alt="Field Officer Verification" i18n-alt/>
+            <!-- ADD THIS WRAPPER -->
+            <div class="story-image-wrapper" appScrollAnimate [animationDelay]="200">
+                <img 
+                    src="assets/images/logo.jpeg" 
+                    alt="Field Officer Verification" 
+                    i18n-alt
+                    class="story-image"
+                />
             </div>
         </div>
     </div>
